homework/5.kubernetes-network/service_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
