homework/5.kubernetes-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rm-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: redmine-app
            port:
              number: 3000
